# olcPGEMac

./: README.md  keytest.cpp  setup.sh
OneLoneCoder/PGE App.xctemplate/: CMakeLists.txt  Makefile  TemplateIcon.tiff  TemplateInfo.plist  olcPixelGameEngine.h
OneLoneCoder/PGE App.xctemplate/App/: main.cpp  olcPixelGameEngine.h
OneLoneCoder/PGE App.xctemplate/include/: cocoawindowing.h
